--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "license": "GPL-3.0-or-later",
   "version": "1.0.0",
   "description": "Stone paper scissor on blockchain",
+  "engines": {
+    "node": ">=14.0"
+  },
   "scripts": {
     "dev": "next",
     "build": "next build",
